Version 0.012 - 2025-12-19
  - String patterns passed to scanning functions (scan, index, rindex, and
    various methods of Span) can now be perl unicode strings, or SecretBuffer
    objects, or Span objects (with their own encoding) and matches will be
    compared codepoint by codepoint.
  - Added BASE64 encoding
  - New exportable memcmp function, and method of SecretBuffer and Span objects
  - Exceptions in unmask_to and unmask_secrets_to now pass through to caller
    more correctly.
  - SecretBuffer overloads 'cmp' with the new memcmp function, so you can now
    compare buffers directly with cmp, lt, gt, eq and so on.
    (Span objects do not, yet, to avoid the complicated question of how best to
     compare mismatched encodings)
  - Fix debug-build-perl asertion failure in Span->copy_to when copying from
    buffer of capacity=0

Version 0.011 - 2025-12-02
  - Fix bug in parsing strings of '$encoding' parameters that could return
    an uninitialized value for an invalid encoding.
  - Fix compatibility of tests for Win32 and Cygwin

Version 0.010 - 2025-11-22
  - Fix bug where substr with replacement that shrinks the buffer would leave
    un-wiped bytes at the end of the string.
  - Fix compile error on BSD, possibly others
  - New methods: splice, append
  - substr, splice, append, and assign now all have special cases for assigning
    a Span of a buffer.
  - New C API functions:
     - secret_buffer_SvPVbyte
     - secret_buffer_splice
     - secret_buffer_splice_sv
  - Removed the short-lived secret_buffer_assign_sv from the previous release
    since secret_buffer_splice_sv provides a more powerful way to do it.
  - C API is now exported as package variables for simpler conditional use of
    the API, such as
    get_sv("Crypt::SecretBuffer::C_API::void secret_buffer_wipe(char *, size_t)",0);
  - Standardized signatures of exported functions in these variables
  - Removed the macros
      SECRET_BUFFER_DECLARE_FUNCTION_POINTERS,