@@ -5,6 +5,9 @@ package Crypt::SecretBuffer::Span;
 use strict;
 use warnings;
 use Crypt::SecretBuffer; # loads XS methods into this package
+use overload 'cmp'  => \&cmp,
+             '""'   => sub { 'Span('.$_[0]->buf->stringify_mask.', pos='.$_[0]->pos.', len='.$_[0]->len.')' },
+             'bool' => sub{1}; # span objects are always true
 
 =head1 SYNOPSIS
 
@@ -194,13 +197,6 @@ Copy the current span of bytes.  C<copy> returns a new SecretBuffer object.  C<c
 into an existing buffer, which can be either a SecretBuffer or a scalar for non-secrets.  There
 is intentionally I<not> a method to I<return> a scalar, to avoid easily leaking secrets.
 
-=method memcmp
-
-  $cmp= $span->memcmp($other_thing);
-
-Compare contents of span byte-by-byte to another Span, SecretBuffer, or plain scalar.
-Returns the same as the 'cmp' operator.
-
 Options:
 
 =over
@@ -215,6 +211,21 @@ case the default is to copy as Perl "wide characters" (which is internally UTF-8
 specify UTF-8 here, you will instead receive bytes of UTF-8 rather than perl wide characters.
 
 =back
+
+=method memcmp
+
+  $cmp= $span->memcmp($other_thing);
+
+Compare contents of span byte-by-byte to another Span, SecretBuffer, or plain scalar.
+Returns the same as the 'cmp' operator.
+
+=method cmp
+
+  $cmp= $span->cmp($other_thing);
+
+Iterate codepoints of this Span and compare each numerically to the codepoints of another Span,
+or perl scalar.  Returns the same as the 'cmp' operator.  This method is also used as the
+overloaded 'cmp' operator.
 
 =cut
 
